// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: { base: 5, xs: 7, s: 5, m: 7, l: 5, xl: 7 } and theme: dark 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  counter-reset: size 5;
}
ul {
  display: flex;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
  box-sizing: border-box;
  text-decoration: underline;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #AFB0B3;
  outline: 0;
  border-radius: 4px;
}
span:focus {
  color: #FBFCFF;
}
span:focus::before {
  content: "";
  position: absolute;
  color: #FBFCFF;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 4px;
}
span:focus:not(:focus-visible)::before {
  border-color: transparent;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #7E7F82;
}
span[aria-label="Previous page"], span[aria-label="Next page"] {
  color: #FBFCFF;
  border: 2px solid #7E7F82;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  text-decoration: none;
  color: #FBFCFF;
  border: 2px solid #7E7F82;
}
@media(min-width:480px) {
  nav {
    counter-reset: size 7;
  }
}

@media(min-width:760px) {
  nav {
    counter-reset: size 5;
  }
}

@media(min-width:1000px) {
  nav {
    counter-reset: size 7;
  }
}

@media(min-width:1300px) {
  nav {
    counter-reset: size 5;
  }
}

@media(min-width:1760px) {
  nav {
    counter-reset: size 7;
  }
}

@media(hover:hover) {
  span:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    color: #FBFCFF;
    background-color: rgba(126, 127, 130, 0.20);
  }
  span[aria-label="Previous page"]:hover, span[aria-label="Next page"]:hover {
    border-color: #7E7F82;
    background-color: transparent;
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
  text-decoration: none;
}
.ellipsis::after {
  content: "…";
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 5 and theme: dark 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  counter-reset: size 5;
}
ul {
  display: flex;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
  box-sizing: border-box;
  text-decoration: underline;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #AFB0B3;
  outline: 0;
  border-radius: 4px;
}
span:focus {
  color: #FBFCFF;
}
span:focus::before {
  content: "";
  position: absolute;
  color: #FBFCFF;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 4px;
}
span:focus:not(:focus-visible)::before {
  border-color: transparent;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #7E7F82;
}
span[aria-label="Previous page"], span[aria-label="Next page"] {
  color: #FBFCFF;
  border: 2px solid #7E7F82;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  text-decoration: none;
  color: #FBFCFF;
  border: 2px solid #7E7F82;
}
@media(hover:hover) {
  span:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    color: #FBFCFF;
    background-color: rgba(126, 127, 130, 0.20);
  }
  span[aria-label="Previous page"]:hover, span[aria-label="Next page"]:hover {
    border-color: #7E7F82;
    background-color: transparent;
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
  text-decoration: none;
}
.ellipsis::after {
  content: "…";
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 5 and theme: light 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  counter-reset: size 5;
}
ul {
  display: flex;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
  box-sizing: border-box;
  text-decoration: underline;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #535457;
  outline: 0;
  border-radius: 4px;
}
span:focus {
  color: #010205;
}
span:focus::before {
  content: "";
  position: absolute;
  color: #010205;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 4px;
}
span:focus:not(:focus-visible)::before {
  border-color: transparent;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #949598;
}
span[aria-label="Previous page"], span[aria-label="Next page"] {
  color: #010205;
  border: 2px solid #949598;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  text-decoration: none;
  color: #010205;
  border: 2px solid #010205;
}
@media(hover:hover) {
  span:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    color: #010205;
    background-color: rgba(148, 149, 152, 0.20);
  }
  span[aria-label="Previous page"]:hover, span[aria-label="Next page"]:hover {
    border-color: #010205;
    background-color: transparent;
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
  text-decoration: none;
}
.ellipsis::after {
  content: "…";
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 7 and theme: dark 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  counter-reset: size 7;
}
ul {
  display: flex;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
  box-sizing: border-box;
  text-decoration: underline;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #AFB0B3;
  outline: 0;
  border-radius: 4px;
}
span:focus {
  color: #FBFCFF;
}
span:focus::before {
  content: "";
  position: absolute;
  color: #FBFCFF;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 4px;
}
span:focus:not(:focus-visible)::before {
  border-color: transparent;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #7E7F82;
}
span[aria-label="Previous page"], span[aria-label="Next page"] {
  color: #FBFCFF;
  border: 2px solid #7E7F82;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  text-decoration: none;
  color: #FBFCFF;
  border: 2px solid #7E7F82;
}
@media(hover:hover) {
  span:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    color: #FBFCFF;
    background-color: rgba(126, 127, 130, 0.20);
  }
  span[aria-label="Previous page"]:hover, span[aria-label="Next page"]:hover {
    border-color: #7E7F82;
    background-color: transparent;
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
  text-decoration: none;
}
.ellipsis::after {
  content: "…";
}"
`;

exports[`getComponentCss() should return correct css for maxNumberOfPageLinks: 7 and theme: light 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
nav {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
  counter-reset: size 7;
}
ul {
  display: flex;
  margin: 0;
  padding: 0;
}
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
span {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: color var(--p-transition-duration, .24s) ease;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
  box-sizing: border-box;
  text-decoration: underline;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  white-space: nowrap;
  cursor: pointer;
  color: #535457;
  outline: 0;
  border-radius: 4px;
}
span:focus {
  color: #010205;
}
span:focus::before {
  content: "";
  position: absolute;
  color: #010205;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 4px;
}
span:focus:not(:focus-visible)::before {
  border-color: transparent;
}
span[aria-disabled] {
  cursor: default;
  pointer-events: none;
  color: #949598;
}
span[aria-label="Previous page"], span[aria-label="Next page"] {
  color: #010205;
  border: 2px solid #949598;
}
span[aria-current] {
  cursor: default;
  pointer-events: none;
  text-decoration: none;
  color: #010205;
  border: 2px solid #010205;
}
@media(hover:hover) {
  span:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    color: #010205;
    background-color: rgba(148, 149, 152, 0.20);
  }
  span[aria-label="Previous page"]:hover, span[aria-label="Next page"]:hover {
    border-color: #010205;
    background-color: transparent;
  }
}

.ellipsis {
  cursor: default;
  pointer-events: none;
  text-decoration: none;
}
.ellipsis::after {
  content: "…";
}"
`;
